# camp

./: .gitignore  CREDITS  ChangeLog  ChangeLog.skin  Compatibility  MPG123_remote.txt  Makefile  Makefile.def  Makefile.in  Players.info  RCLayout.txt  README  README.md  Skin-HOWTO.txt  build.h  camp.h  camp.ini  cconfig.c  chromansi.c  config.h  config.status  configure  configure.ac  configure.in  filelist.c  fileselector.c  fileselector7bit.c  fork.c  gui.c  gui7bit.c  id3.c  id3gui.c  id3gui7bit.c  lirc.ini  lirc_client.c  lirc_client.h  machtype.h  main.c  misc.c  mixer.c  (+6 more)
contrib/: camp.bx
