dnl Process this file with autoconf to produce a configure script.
AC_INIT(camp.h)
#AC_CONFIG_HEADER(config.h)

LIBS=
CFLAGS=-O2
bindir=

dnl Checks for programs.
AC_PROG_CC
#AC_PROG_INSTALL

dnl Checks for libraries.
AC_CHECK_LIB(gpm,main,[
 LIBS="$LIBS -lgpm"
 CFLAGS="$CFLAGS -DUSE_GPM_MOUSE"
])

AC_CHECK_HEADERS(termios.h,[
 CFLAGS="$CFLAGS -DUSE_TERMIOS"
],[
 AC_CHECK_LIB(ncurses,main,[
  CFLAGS="$CFLAGS -DUSE_NCURSES"
  LIBS="$LIBS -lncurses"
]) ])

dnl Checks for header files.
#AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
#AC_C_CONST
#AC_TYPE_PID_T
#AC_TYPE_SIZE_T

dnl Checks for library functions.
#AC_TYPE_SIGNAL
#AC_CHECK_FUNCS(gethostname)

dnl Check for mixer..

AC_MSG_CHECKING(for mixer)

for dir in /usr/bin /usr/local/bin /bin /sbin \
           /usr/sbin /usr/local/sbin; do
if test -x $dir/aumix
then mixer="$dir/aumix"; break;
fi
done

if test x$mixer != x
 then 
  AC_MSG_RESULT($mixer)
  CFLAGS="$CFLAGS -DCUSTOM_RUN=\\\"$mixer\\\" -DCUSTOM_BUTTON=\\\"mixr\\\"" 
 else AC_MSG_RESULT(not found)
fi


dnl Check for bindir

AC_MSG_CHECKING(for old camp binary)

for dir in /usr/bin /usr/local/bin /bin /sbin \
           /usr/sbin /usr/local/sbin; do
if test -x $dir/camp
then bindir="$dir"; break;
fi
done

if test x$bindir != x 
 then AC_MSG_RESULT($bindir) 
 else AC_MSG_RESULT(not found)
 bindir=/usr/local/bin
fi

AC_OUTPUT(Makefile)
